# htmeta

./: .gitignore  Cargo.toml  DETAILS.md  Justfile  README.md
.github/workflows/: release-artifacts.yml  release.yml
docs/meta/: highlight.html
examples/: for.kdl  include.html  include.kdl  simple.html  simple.kdl  template.kdl
examples/fragments/: lorem.kdl
htmeta/: Cargo.toml
htmeta-auto-test/: Cargo.toml
htmeta-auto-test/src/: lib.rs
htmeta-cli/: Cargo.toml
htmeta-cli/src/: help.txt  main.rs  watcher.rs
htmeta-template/: Cargo.toml
htmeta-template/src/: expr.rs  lib.rs  template_instantiation.rs  utils.rs
htmeta-template/tests/fixtures/: auto_props.html  auto_props.kdl  basic_at_children.html  basic_at_children.kdl  basic_test.html  basic_test.kdl  children_entries.html  children_entries.kdl  composite-variables.kdl  default_params.kdl  for.kdl  for_range.kdl  param_compose_test.html  param_compose_test.kdl  param_test.html  param_test.kdl
htmeta/benches/: landing_example.html  landing_example.kdl
htmeta/src/: error.rs  expr.rs  lib.rs  lorem.txt  plugins.rs  tests.rs  utils.rs
htmeta/src/expr/: :w  builtins.rhai  builtins.rs
htmeta/tests/fixtures/: basic_test.kdl  basic_test2.html  basic_test2.kdl  basic_var.kdl  builtins.kdl  complex_var.kdl  fail_mixed_text.kdl  fail_mixed_text.ron  minified_basic.kdl  minified_medium.kdl  minified_var_scopes.html  minified_var_scopes.kdl  shouter_basic.html  var_scopes.html  var_scopes.kdl
src/: error.rs  lib.rs
tests/fixtures/: basic_test.kdl  basic_var.kdl  minified_medium.html  minified_medium.kdl  shouter_basic.html  update_tests.sh
