[package]
name = "htmeta"
version = "0.2.0"
edition = "2021"
authors = ["Diego Augusto <diego@diegovsky.me>"]
description = "A KDL dialect for HTML"
license = "MIT"

[lib]
doctest = false

[workspace]
members = ["htmeta-cli"]

[dependencies]
html-escape = "0.2.13"
kdl = "4.6.0"
regex = "1.10.6"

[dev-dependencies]
similar = "2.6.0"
similar-asserts = "1.5.0"
