[package]
name = "htmeta"
version = "0.3.0"
edition = "2021"
authors = ["Diego Augusto <diego@diegovsky.me>"]
description = "A KDL dialect for HTML"
license = "MIT"

[lib]
doctest = false

[features]
default = []
test_gen = []

[workspace]
members = [ "htmeta-auto-test","htmeta-cli", "htmeta-template"]

[dependencies]
html-escape = "0.2.13"
kdl = "4.6.0"
regex = "1.10.6"

[dev-dependencies]
similar = "2.6.0"
similar-asserts = "1.5.0"
htmeta-auto-test = {path="htmeta-auto-test"}

[package.metadata.docs.rs]
# Adds the syntax highliting
rustdoc-args = [
  "--html-in-header",
  "docs/meta/highlight.html",
]
