[package]
name = "htmeta-cli"
version = "1.0.0"
edition = "2024"
authors = ["Diego Augusto <diego@diegovsky.me>"]
description = "A CLI for htmeta, a KDL dialect that compiles into HTML."
license = "MIT"
repository = "https://github.com/Diegovsky/htmeta"
keywords = ["html", "kdl", "web", "tool"]

[[bin]]
name = "htmeta"
path = "src/main.rs"

[features]
default = ["templates"]
templates = ["dep:htmeta-template"]

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
htmeta = { path="../htmeta" }
lexopt = "0.3.0"
htmeta-template = { path = "../htmeta-template", optional = true }
notify = "8.2.0"
multimap.workspace = true
