[package]
name = "htmeta"
version = "0.4.0"
edition = "2021"
authors = ["Diego Augusto <diego@diegovsky.me>"]
description = "A KDL dialect that compiles into HTML."
license = "MIT"
repository = "https://github.com/Diegovsky/htmeta"
keywords = ["html", "kdl", "web"]

[lib]
doctest = false

[features]
default = []
test_gen = []

[dependencies]
html-escape = "0.2.13"
regex = "1.10.6"
kdl = {workspace = true}
dyn-clone = "1.0.17"

[dev-dependencies]
similar = "2.6.0"
similar-asserts = "1.5.0"
htmeta-auto-test = { path = "../htmeta-auto-test" }
criterion = { version = "0.5" }

[[bench]]
name = "base_benchmark"
harness = false


[package.metadata.docs.rs]
# Adds the syntax highliting
rustdoc-args = [
  "--html-in-header",
  "docs/meta/highlight.html",
]
